Add top-level nav
Originally by @RawKStar77
https://github.com/hypothesis/ideas/commit/8d758c42bebadff1809b87d2b42b8b7be70b89e5

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,10 @@
           <div class="header">
             <h1 class="title"><a href="/">{{ site.name }}</a></h1>
             <a class="extra" href="/">home</a>
+            <a class="extra" href="https://hypothes.is">Home</a>
+            <a class="extra" href="https://hypothes.is/contribute/">Contribute</a>
+            <a class="extra" href="http://docs.hypothes.is/">Documentation</a>
+            <a class="extra" href="http://list.hypothes.is/archive/dev/">Mailing List Archives</a>
           </div>
 
           {{ content }}
