Add Conversation page; Rethink nav

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,10 +18,9 @@
         <div class="site">
           <div class="header">
             <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-            <a class="extra" href="https://hypothes.is">Home</a>
             <a class="extra" href="https://hypothes.is/contribute/">Contribute</a>
-            <a class="extra" href="http://docs.hypothes.is/">Documentation</a>
-            <a class="extra" href="http://list.hypothes.is/archive/dev/">Mailing List Archives</a>
+            <a class="extra" href="https://github.com/hypothesis">Code</a>
+            <a class="extra" href="conversation/">Conversation</a>
           </div>
 
           {{ content }}
