Turned Contribute into a team list w/links
Links. Crazy stuff those.

Also added space for myself and a simple post
to demo per-person blogs.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
         <div class="site">
           <div class="header">
             <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-            <a class="extra" href="https://hypothes.is/contribute/">Contribute</a>
+            <a class="extra" href="{{ site.url }}/team/">Contribute</a>
             <a class="extra" href="https://github.com/hypothesis">Code</a>
             <a class="extra" href="conversation/">Conversation</a>
           </div>
