--- a/_includes/posts_list.html
+++ b/_includes/posts_list.html
@@ -1,6 +1,7 @@
 <ul class="posts">
   {% for post in posts %}
-    <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a>
+    <li><time>{{ post.date | date_to_string }}</time>
+    &raquo; <a href="{{ post.url }}">{{ post.title }}</a>
       by
       <a href="https://github.com/{{ post.author }}" class="post-author">
         <img src="https://github.com/{{ post.author }}.png" class="avatar" alt="{{ post.author }}">
