--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,28 +1,20 @@
 ---
 layout: default
 ---
-<!-- based the MIT licensed https://github.com/jekyll/jekyll/blob/master/site/_layouts/news_item.html -->
-<article>
-  <h2>
-    {{ page.title }}
-    <a href="{{ page.url }}" class="permalink" title="Permalink">∞</a>
-  </h2>
-  <span class="post-category">
-    <span class="label">
-      {{ page.categories | array_to_sentence_string }}
-    </span>
-  </span>
-  <div class="post-meta meta">
-    <span class="post-date">
-      {{ page.date | date_to_string }}
-    </span>
+<div id="article">
+  <div class="article-title">{{ page.title }}</div>
+  <p class="meta">
+    <small>&nbsp;<i class="fa fa-calendar-o"></i>
+    <time>{{ page.date | date_to_string}}</time>
     <a href="https://github.com/{{ page.author }}" class="post-author">
       <img src="https://github.com/{{ page.author }}.png" class="avatar" alt="{{ page.author }}">
       {{ page.author }}
     </a>
-  </div>
-  <div class="post-content post">
+  </small></p>
+  <hr/>
+  <div class="post">
     {{ content }}
   </div>
-</article>
+</div>
 
+{% include pager.html %}
