Add Calendar and Events system
Used Books in Browsers as an example.

--- a/_includes/site_nav.html
+++ b/_includes/site_nav.html
@@ -1,3 +1,4 @@
 <li><a href="{{ site.baseurl }}/team/">Contribute</a></li>
 <li><a href="https://github.com/hypothesis">Code</a></li>
 <li><a href="{{ site.baseurl }}/conversation/">Conversation</a></li>
+<li><a href="{{ site.baseurl }}/calendar/">Calendar</a></li>
