Handful of fiddly markup fixes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,6 @@
+      </div><!-- /container -->
+    </div><!-- /wrapper -->
+
     <footer>
       <!-- TODO: add copyright, licensing, etc. -->
     </footer>
