--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,13 +12,12 @@
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
       <![endif] d-->
-    </head>
-    <body>
-<div class="nav-toggle"><i class="fa fa-bars fa-2x"></i> Herring Cove </div>
-      <div id = "wrapper">
+</head>
+<body>
+  <div class="nav-toggle"><i class="fa fa-bars fa-2x"></i> {{ site.title }} </div>
 
-
-<div class="navbar navbar-default" role="navigation">
+  <div id = "wrapper">
+    <div class="navbar navbar-default" role="navigation">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -60,13 +59,10 @@
          </div>
          <hr />
          <h5 class="text-center">Supported in part by...</h5>
-         <li><img src="{{ site.url }}/images/sloanlogo.jpg" /></li>
-         <li><img src="{{ site.url }}/images/knightlogo.png" /></li>
-         <li><img src="{{ site.url }}/images/shuttleworthlogo.jpeg" /></li>
+         <li><img src="{{ site.url }}/images/sloanlogo.jpg" alt="Alfred P. Sloan Foundation logo" /></li>
+         <li><img src="{{ site.url }}/images/knightlogo.png" alt="Knight Foundation logo" /></li>
+         <li><img src="{{ site.url }}/images/shuttleworthlogo.jpeg" alt="Shuttleworth Foundation" /></li>
        </ul>
      </div>
 
-
-
      <div class="container">
-
