Make post.date display conditional

--- a/_includes/posts_list.html
+++ b/_includes/posts_list.html
@@ -1,6 +1,9 @@
 <ul class="posts">
   {% for post in posts %}
-    <li><time>{{ post.date | date_to_string }}</time>
+    <li>
+    {% if post.date %}
+    <time>{{ post.date | date_to_string }}</time>
+    {% endif %}
     &raquo; <a href="{{ post.url }}">{{ post.title }}</a>
       by
       <a href="https://github.com/{{ post.author }}" class="post-author">
