Add Architecture section; New side nav
Also added the Authentication Architecture overview doc
from @tilgovi

--- a/_includes/site_nav.html
+++ b/_includes/site_nav.html
@@ -2,3 +2,6 @@
 <li><a href="https://github.com/hypothesis">Code</a></li>
 <li><a href="{{ site.baseurl }}/conversation/">Conversation</a></li>
 <li><a href="{{ site.baseurl }}/calendar/">Calendar</a></li>
+<hr />
+<li><a href="{{ site.baseurl }}/architecture/">Architecture</a></li>
+<li><a href="{{ site.baseurl }}/advocacy/">Advocacy</a></li>
