Fix some header template pasting issues

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,9 +9,9 @@
   <link href="{{ site.baseurl }}/stylesheets/hc.css" rel="stylesheet">
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
   <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-      <![endif] d-->
+  <!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif] -->
 </head>
 <body>
   <div class="nav-toggle"><i class="fa fa-bars fa-2x"></i> {{ site.title }} </div>
