--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>{{ page.title }} | {{ site.name }}</title>
+  <title>{{ page.title }} | {{ site.title }}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="{{ site.description }}">
   <link href="{{ site.baseurl }}/stylesheets/bootstrap.min.css" rel="stylesheet">
@@ -26,7 +26,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <p class="navbar-brand">{{ site.name }}</p>
+          <p class="navbar-brand">{{ site.title }}</p>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -42,7 +42,7 @@
        <div id="sidebar-wrapper">
         <ul class="sidebar-nav">
           <li class="sidebar-brand"><a href="{{ site.baseurl }}/">
-            <h4>{{ site.name }}</h4>
+            <h4>{{ site.title }}</h4>
           </a>
           {% if site.description %}
           <h3>{{ site.description }}</h3>
