Gave Product an index, added to nav
Made Sidebar.md and actual page.
Said @aron was the author...roughly...

--- a/_includes/site_nav.html
+++ b/_includes/site_nav.html
@@ -5,3 +5,4 @@
 <hr />
 <li><a href="{{ site.baseurl }}/architecture/">Architecture</a></li>
 <li><a href="{{ site.baseurl }}/advocacy/">Advocacy</a></li>
+<li><a href="{{ site.baseurl }}/advocacy/">Product</a></li>
