--- a/_includes/site_nav.html
+++ b/_includes/site_nav.html
@@ -5,4 +5,4 @@
 <hr />
 <li><a href="{{ site.baseurl }}/architecture/">Architecture</a></li>
 <li><a href="{{ site.baseurl }}/advocacy/">Advocacy</a></li>
-<li><a href="{{ site.baseurl }}/advocacy/">Product</a></li>
+<li><a href="{{ site.baseurl }}/product/">Product</a></li>
