--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,6 +5,7 @@
   <title>{{ page.title }} | {{ site.title }}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="{{ site.description }}">
+  <link rel="edit-form" href="https://github.com/hypothesis/hypothesis.github.io/edit/master/{{ page.path }}" title="Edit on GitHub">
   <link rel="alternate" type="application/atom+xml" href="{{ site.baseurl }}/atom.xml" title="All {{ site.title }} Posts">
   <link rel="alternate" type="application/rss+xml" href="{{ site.baseurl }}/rss.xml" title="All {{ site.title }} Posts">
   <link href="{{ site.baseurl }}/stylesheets/bootstrap.min.css" rel="stylesheet">
