Kill off those massive page margins

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,6 +10,11 @@
   <link rel="alternate" type="application/rss+xml" href="{{ site.baseurl }}/rss.xml" title="All {{ site.title }} Posts">
   <link href="{{ site.baseurl }}/stylesheets/bootstrap.min.css" rel="stylesheet">
   <link href="{{ site.baseurl }}/stylesheets/hc.css" rel="stylesheet">
+  <style>
+    .main {
+      margin: 0 3em 0 1em;
+    }
+  </style>
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
   <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
   <!--[if lt IE 9]>
@@ -68,4 +73,4 @@
        </ul>
      </div>
 
-     <div class="container">
+     <div class="main">
