--- a/_includes/site_nav.html
+++ b/_includes/site_nav.html
@@ -6,4 +6,5 @@
 <li><a href="{{ site.baseurl }}/architecture/">Architecture</a></li>
 <li><a href="{{ site.baseurl }}/advocacy/">Advocacy</a></li>
 <li><a href="{{ site.baseurl }}/product/">Product</a></li>
+<li><a href="{{ site.baseurl }}/design/">Design</a></li>
 <li><a href="{{ site.baseurl }}/userresearch/">User Research</a></li>
