Make Code a site section; Use site.github metadata

--- a/_includes/site_nav.html
+++ b/_includes/site_nav.html
@@ -1,5 +1,5 @@
 <li><a href="{{ site.baseurl }}/team/">Contribute</a></li>
-<li><a href="https://github.com/hypothesis">Code</a></li>
+<li><a href="{{ site.baseurl }}/code/">Code</a></li>
 <li><a href="{{ site.baseurl }}/conversation/">Conversation</a></li>
 <li><a href="{{ site.baseurl }}/calendar/">Calendar</a></li>
 <hr />
