Change old site.github to site.github.owner_url

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -63,7 +63,7 @@
            {% if site.twitter %}<li> <a href="{{ site.twitter }}"><i class="fa fa-twitter-square"></i> twitter</a></li>{% endif %}
            {% if site.linkedin %}<li> <a href="{{ site.linkedin }}"><i class="fa fa-linkedin-square"></i> linkedin</a> </li>{% endif %}
            {% if site.facebook %}<li> <a href="{{ site.facebook }}"><i class="fa fa-facebook-square"></i> facebook</a></li>{% endif %}
-           {% if site.github %}<li> <a href="{{ site.github }}"><i class="fa fa-github-square"></i> github</a> </li>{% endif %}
+           {% if site.github.owner_url %}<li> <a href="{{ site.github.owner_url }}"><i class="fa fa-github-square"></i> github</a> </li>{% endif %}
          </div>
          <hr />
          <h5 class="text-center">Supported in part by...</h5>
